tests/ui/never_type/issue-10176.stderr
error[E0308]: mismatched types
  --> $DIR/issue-10176.rs:2:5
   |
LL | fn f() -> isize {
   |           ----- expected `isize` because of return type
LL |     (return 1, return 2)
   |     ^^^^^^^^^^^^^^^^^^^^ expected `isize`, found `(!, !)`
   |
   = note: expected type `isize`
             found tuple `(!, !)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
